# python-modern-example

./: .env  .env.example  .gitignore  README.md  justfile  pyproject.toml
src/: main.py  main_test.py
