[project]
name = "python-modern-example"
version = "0.1.0"
description = "A modern Python example demonstrating best practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.389", "pytest>=8.3.3", "ruff>=0.8.1"]

[tool.ruff]
line-length = 120 # sane default for modern screen sizes

[tool.ruff.lint]
select = [
    "E",   # Basic linting errors
    "W",   # Basic linting warnings
    "F",   # Pyflakes
    "ANN", # Type checking annotations
    "I",   # Import sorting
    "D",   # Docstring style
    "B",   # Bugbear
    "N",   # Naming conventions
    "C4",  # comprehensions
    "S",   # Bandit security checks
    "UP",  # Upgrade syntax
]
ignore = [ # ignore specific errors here
    "D1", # disable missing docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Google style docstrings

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = [
    "S101", # asserts allowed in tests
]

[tool.pyright]
typeCheckingMode = "strict" # strict type checking
